BaSP-W01: main section and assets created

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -12,11 +12,11 @@
         <nav>
             <ul>
                 <li><a href="">Trackgenix</a></li>
-                <li><a href=""></a>About Trackgenix</li>
-                <li><a href=""></a>Functions</li>
-                <li><a href=""></a>Info</li>
-                <li><a href=""></a>History</li>
-                <li><a href=""></a>Products </li>
+                <li><a href="">About Trackgenix</a></li>
+                <li><a href="">Functions</a></li>
+                <li><a href="">Info</a></li>
+                <li><a href="">History</a></li>
+                <li><a href="">Products</a></li>
             </ul>
         </nav>
     </header> 
@@ -24,9 +24,9 @@
         <p>Menú</p>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href=""></a>Sign up</li>
-            <li><a href=""></a>Login</li>
-            <li><a href=""></a>Contact</li>
+            <li ><a href="">Sign up</a></li>
+            <li><a href="">Login</a></li>
+            <li><a href="">Contact</a></li>
         </ul>
         <div>    
             <p>Get in Touch</p>
@@ -35,6 +35,22 @@
             <p>1234 Somewhere Road Somewhere, XX 000-0000</p>
         </div>
     </aside>
+    <!--main-->
+    <main>
+        <div> 
+            <section>
+                <h2>Trackgenix</h2>
+                <p>Make it easy to record hours worked on each project and work team at GigaTech Software Solutions SA</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <a href="">LEARN MORE</a>
+            </section>
+        </did>
+        <div>
+            <img src="" alt="trackgenix-index">
+        </div>
+
+    </main>  
     <!-- Footer-->
     <div>
         <ul>
