BaSP-W01: about trackgenix section created

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -7,7 +7,7 @@
     <title>Trackgenix</title>
 </head>
 <body>
-    <!-- Nav bar y sideslide -->
+    <!-- header and nav -->
     <header>
         <nav>
             <ul>
@@ -20,8 +20,9 @@
             </ul>
         </nav>
     </header> 
+    <!--aside-->
     <aside>
-        <p>Menú</p>
+        <h4>Menú</h4>
         <ul>
             <li><a href="">Home</a></li>
             <li ><a href="">Sign up</a></li>
@@ -47,20 +48,52 @@
             </section>
         </did>
         <div>
-            <img src="" alt="trackgenix-index">
+            <img src="" alt="trackgenix index">
         </div>
 
     </main>  
+    <!--second page-->
+    <section>
+        <div> 
+            <h3>About Trackgenix</h3>
+        </div>
+        <article>
+            <img src="" alt="productivity booster">
+            <p>Productivity booster</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </article>
+        <article>
+            <img src="" alt="leadership">
+            <p>Leadership and team management</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </article>
+        <article>
+            <img src="" alt="work traceability">
+            <p>Work traceability</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>       
+        </article>
+        <article>
+            <img src="" alt="decision making">
+            <p>Decision making</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </article>
+    </section>
     <!-- Footer-->
-    <div>
-        <ul>
-            <li><a href=""></a>Linkedin</li>
-            <li><a href=""></a>Twitter</li>
-            <li><a href=""></a>Facebook</li>
-            <li><a href=""></a>Instagram</li>
-            <li><a href=""></a>Github</li>
-        </ul>
-        <p>Copyright © 2022 Radium Rocket. All rights reserved.</p>
-    </div>
+    <footer>
+        <div>
+            <ul>
+                <li><a href="">Linkedin</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Github</a></li>
+            </ul>
+            <p>Copyright © 2022 Radium Rocket. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
