BaSP-W01: functions and information section created

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -52,7 +52,7 @@
         </div>
 
     </main>  
-    <!--second page-->
+    <!--about tackgenix-->
     <section>
         <div> 
             <h3>About Trackgenix</h3>
@@ -82,7 +82,64 @@
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
         </article>
     </section>
-    <!-- Footer-->
+    <!--function-->
+    <section>
+        <div> 
+            <h3>Functions</h3>
+        </div>
+        <article>
+            <img src="" alt="functions-img1">
+            <p>Record of hours</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </article>
+        <article>
+            <img src="" alt="functions-img2">
+            <p>Resource management</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>        
+        </article>
+        <article>
+            <img src="" alt="functions-img3">
+            <p>Reports</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>       
+        </article>
+        <article>
+            <img src="" alt="functions-img4">
+            <p>Multiple roles</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>        
+        </article>
+    </section>
+    <!--information-->
+    <div>
+        <h3>Information</h3>
+        <form action="">
+            <div>
+                <label>Name</label>
+                <input type="text" placeholder="text your name">
+            </div>
+            <div>
+                <label>Email</label>
+                <input type="email" placeholder="text your email">
+            </div>
+            <div>
+                <label>Contact area</label>
+                <select name="area">
+                    <option value="human-resources">Human Resources</option>
+                    <option value="systems">Systems</option>
+                    <option value="commercialization">Commercialization</option>
+                </select>
+            </div>
+            <div>
+                <label>Message</label>
+                <textarea name="message" cols="30" rows="10"></textarea>
+            </div>
+            <input type="submit" name="submit" value="Submit">
+        </form>
+    </div>
+    <!--Footer-->
     <footer>
         <div>
             <ul>
