BaSP-W01: history, products and services created. <p> tags modified

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -16,7 +16,7 @@
                 <li><a href="">Functions</a></li>
                 <li><a href="">Info</a></li>
                 <li><a href="">History</a></li>
-                <li><a href="">Products</a></li>
+                <li><a href="">Products & Services</a></li>
             </ul>
         </nav>
     </header> 
@@ -41,9 +41,15 @@
         <div> 
             <section>
                 <h2>Trackgenix</h2>
-                <p>Make it easy to record hours worked on each project and work team at GigaTech Software Solutions SA</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>
+                    Make it easy to record hours worked on each project
+                    and work team at GigaTech Software Solutions SA.
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                </p>
                 <a href="">LEARN MORE</a>
             </section>
         </did>
@@ -60,26 +66,34 @@
         <article>
             <img src="" alt="productivity booster">
             <p>Productivity booster</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
         </article>
         <article>
             <img src="" alt="leadership">
             <p>Leadership and team management</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
         </article>
         <article>
             <img src="" alt="work traceability">
             <p>Work traceability</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>       
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>      
         </article>
         <article>
             <img src="" alt="decision making">
             <p>Decision making</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
         </article>
     </section>
     <!--function-->
@@ -90,26 +104,34 @@
         <article>
             <img src="" alt="functions-img1">
             <p>Record of hours</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
         </article>
         <article>
             <img src="" alt="functions-img2">
             <p>Resource management</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>        
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>      
         </article>
         <article>
             <img src="" alt="functions-img3">
             <p>Reports</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>       
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>    
         </article>
         <article>
             <img src="" alt="functions-img4">
             <p>Multiple roles</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>        
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>       
         </article>
     </section>
     <!--information-->
@@ -139,6 +161,57 @@
             <input type="submit" name="submit" value="Submit">
         </form>
     </div>
+    <!--history-->
+    <div>
+        <div>
+            <h3>Our history</h3>
+            <h4>GigaTech Software Solutions SA</h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+        </div>
+        <div>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+        </div>
+    </div>
+    <!--products & services -->
+    <section>
+        <div>
+            <h3>Products & Services</h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and 
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s.
+            </p>
+        </div>
+    </section>
+
+    <!--products-->
+
+    <!--business-->
+
+    <!--support-->
+
     <!--Footer-->
     <footer>
         <div>
