BaSP-W01: products section created

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -205,9 +205,25 @@
             </p>
         </div>
     </section>
-
     <!--products-->
-
+    <div>
+        <div>
+            <h3>Products</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            </p>
+        </div>
+        <div>
+            <ol>
+                <li><a href="">Functionalities</a></li>
+                <li><a href="">Downloads</a></li>
+                <li><a href="">Integrations</a></li>
+                <li><a href="">Additional features</a></li>
+            </ol>
+        </div>
+    </div>
     <!--business-->
 
     <!--support-->
