BaSP-W01: business and support section created

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -225,9 +225,43 @@
         </div>
     </div>
     <!--business-->
-
+    <div>
+        <div>
+            <h3>Business</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            </p>
+        </div>
+        <div>
+            <ol>
+                <li><a href="">About us</a></li>
+                <li><a href="">Customers</a></li>
+                <li><a href="">Means</a></li>
+                <li><a href="">Blog</a></li>
+            </ol>
+        </div>
+    </div>
     <!--support-->
-
+    <div>
+        <div>
+            <h3>Support</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            </p>
+        </div>
+        <div>
+            <ol>
+                <li><a href="">Aid</a></li>
+                <li><a href="">Tutorials</a></li>
+                <li><a href="">API</a></li>
+                <li><a href="">Contacts</a></li>
+            </ol>
+        </div>
+    </div>
     <!--Footer-->
     <footer>
         <div>
