BaSP-W01: images added to the footer and main section

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -24,10 +24,22 @@
     <aside>
         <h4>Menú</h4>
         <ul>
-            <li><a href="">Home</a></li>
-            <li ><a href="">Sign up</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">Contact</a></li>
+            <li>
+                <img src="" alt="">
+                <a href="assets/home.svg">Home</a>
+            </li>
+            <li >
+                <img src="" alt="">
+                <a href="">Sign up</a>
+            </li>
+            <li>
+                <img src="" alt="">
+                <a href="assets/login.svg">Login</a>
+            </li>
+            <li>
+                <img src="" alt="">
+                <a href="">Contact</a>
+            </li>
         </ul>
         <div>    
             <p>Get in Touch</p>
@@ -54,9 +66,8 @@
             </section>
         </did>
         <div>
-            <img src="" alt="trackgenix index">
+            <img src="assets/img-index.png" width="700px" alt="trackgenix index">
         </div>
-
     </main>  
     <!--about tackgenix-->
     <section>
@@ -266,11 +277,26 @@
     <footer>
         <div>
             <ul>
-                <li><a href="">Linkedin</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Github</a></li>
+                <li>
+                    <img src="assets/linkedin.png" alt="linkedIn">
+                    <a href="">Linkedin</a>
+                </li>
+                <li>
+                    <img src="assets/gorjeo.png" alt="twitter">
+                    <a href="">Twitter</a>
+                </li>
+                <li>
+                    <img src="assets/facebook.png" alt="facebook">
+                    <a href="">Facebook</a>
+                </li>
+                <li>
+                    <img src="assets/instagram.png" alt="instagram">
+                    <a href="">Instagram</a>
+                </li>
+                <li>
+                    <img src="assets/github.png" alt="github">
+                    <a href="">Github</a>
+                </li>
             </ul>
             <p>Copyright © 2022 Radium Rocket. All rights reserved.</p>
         </div>
