BaSP-W01: images added to the aside section

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -25,19 +25,19 @@
         <h4>Menú</h4>
         <ul>
             <li>
-                <img src="" alt="">
-                <a href="assets/home.svg">Home</a>
+                <img src="assets/home.png" alt="home">
+                <a href="" >Home</a>
             </li>
             <li >
-                <img src="" alt="">
+                <img src="assets/add-user.png" alt="signup">
                 <a href="">Sign up</a>
             </li>
             <li>
-                <img src="" alt="">
-                <a href="assets/login.svg">Login</a>
+                <img src="assets/user-interface.png" alt="login">
+                <a href="">Login</a>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="assets/email.png" alt="contact">
                 <a href="">Contact</a>
             </li>
         </ul>
