BaSP-W01: icons and images from about and functions sections added

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -22,37 +22,51 @@
     </header> 
     <!--aside-->
     <aside>
-        <h4>Menú</h4>
-        <ul>
-            <li>
-                <img src="assets/home.png" alt="home">
-                <a href="" >Home</a>
-            </li>
-            <li >
-                <img src="assets/add-user.png" alt="signup">
-                <a href="">Sign up</a>
-            </li>
-            <li>
-                <img src="assets/user-interface.png" alt="login">
-                <a href="">Login</a>
-            </li>
-            <li>
-                <img src="assets/email.png" alt="contact">
-                <a href="">Contact</a>
-            </li>
-        </ul>
-        <div>    
-            <p>Get in Touch</p>
-            <p>info@gigatech.com</p>
-            <p>(+000) 000-000000</p>
-            <p>1234 Somewhere Road Somewhere, XX 000-0000</p>
+        <section>
+            <input type="search">
+            <h5>Menú</h5>
+            <ul>
+                <li>
+                    <img src="assets/home.png" alt="home">
+                    <a href="" >Home</a>
+                </li>
+                <li >
+                    <img src="assets/add-user.png" alt="signup">
+                    <a href="">Sign up</a>
+                </li>
+                <li>
+                    <img src="assets/user-interface.png" alt="login">
+                    <a href="">Login</a>
+                </li>
+                <li>
+                    <img src="assets/email.png" alt="contact">
+                    <a href="">Contact</a>
+                </li>
+            </ul>
+        </section>
+        <div>  
+            <div>
+                <h5>Get in Touch</h5>
+            </div>
+            <div>
+                <img src="assets/email.png" alt="">
+                <p>info@gigatech.com</p>
+            </div> 
+            <div> 
+                <img src="assets/telephone.png" alt="">
+                <p>(+000) 000-000000</p>
+            </div>
+            <div>
+                <img src="assets/pin.png" alt="">
+                <p>1234 Somewhere Road Somewhere, XX 000-0000</p>
+            </div>
         </div>
     </aside>
     <!--main-->
     <main>
         <div> 
             <section>
-                <h2>Trackgenix</h2>
+                <h1>Trackgenix</h1>
                 <p>
                     Make it easy to record hours worked on each project
                     and work team at GigaTech Software Solutions SA.
@@ -72,35 +86,35 @@
     <!--about tackgenix-->
     <section>
         <div> 
-            <h3>About Trackgenix</h3>
+            <h2>About Trackgenix</h2>
         </div>
         <article>
-            <img src="" alt="productivity booster">
-            <p>Productivity booster</p>
+            <img src="assets/idea.png" alt="productivity booster">
+            <h4>Productivity booster</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>
         </article>
         <article>
-            <img src="" alt="leadership">
-            <p>Leadership and team management</p>
+            <img src="assets/reports.png" alt="leadership">
+            <h4>Work traceability</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>
         </article>
         <article>
-            <img src="" alt="work traceability">
-            <p>Work traceability</p>
+            <img src="assets/user2.png" alt="work traceability">
+            <h4>Leadership and team management</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>      
         </article>
         <article>
-            <img src="" alt="decision making">
-            <p>Decision making</p>
+            <img src="assets/like.png" alt="decision making">
+            <h4>Decision making</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
@@ -110,35 +124,35 @@
     <!--function-->
     <section>
         <div> 
-            <h3>Functions</h3>
+            <h2>Functions</h2>
         </div>
         <article>
-            <img src="" alt="functions-img1">
-            <p>Record of hours</p>
+            <img src="assets/clock.png" alt="functions-img1">
+            <h4>Record of hours</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>
         </article>
         <article>
-            <img src="" alt="functions-img2">
-            <p>Resource management</p>
+            <img src="assets/profit-report.png" alt="functions-img2">
+            <h4>Reports</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>      
         </article>
         <article>
-            <img src="" alt="functions-img3">
-            <p>Reports</p>
+            <img src="assets/gear.png" alt="functions-img3">
+            <h4>Resource management</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </p>    
         </article>
         <article>
-            <img src="" alt="functions-img4">
-            <p>Multiple roles</p>
+            <img src="assets/roles.png" alt="functions-img4">
+            <h4>Multiple roles</h4>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
@@ -147,7 +161,7 @@
     </section>
     <!--information-->
     <div>
-        <h3>Information</h3>
+        <h2>Information</h2>
         <form action="">
             <div>
                 <label>Name</label>
@@ -175,8 +189,8 @@
     <!--history-->
     <div>
         <div>
-            <h3>Our history</h3>
-            <h4>GigaTech Software Solutions SA</h4>
+            <h2>Our history</h2>
+            <h3>GigaTech Software Solutions SA</h3>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -204,7 +218,7 @@
     <!--products & services -->
     <section>
         <div>
-            <h3>Products & Services</h3>
+            <h2>Products & Services</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and 
                 typesetting industry. Lorem Ipsum has been the industry's
@@ -219,7 +233,7 @@
     <!--products-->
     <div>
         <div>
-            <h3>Products</h3>
+            <h2>Products</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <p>
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -228,17 +242,29 @@
         </div>
         <div>
             <ol>
-                <li><a href="">Functionalities</a></li>
-                <li><a href="">Downloads</a></li>
-                <li><a href="">Integrations</a></li>
-                <li><a href="">Additional features</a></li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Functionalities</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Downloads</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Integrations</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Additional features</a>
+                </li>
             </ol>
         </div>
     </div>
     <!--business-->
     <div>
         <div>
-            <h3>Business</h3>
+            <h2>Business</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <p>
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -247,17 +273,29 @@
         </div>
         <div>
             <ol>
-                <li><a href="">About us</a></li>
-                <li><a href="">Customers</a></li>
-                <li><a href="">Means</a></li>
-                <li><a href="">Blog</a></li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">About us</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Customers</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Means</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Blog</a>
+                </li>
             </ol>
         </div>
     </div>
     <!--support-->
     <div>
         <div>
-            <h3>Support</h3>
+            <h2>Support</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <p>
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -266,10 +304,22 @@
         </div>
         <div>
             <ol>
-                <li><a href="">Aid</a></li>
-                <li><a href="">Tutorials</a></li>
-                <li><a href="">API</a></li>
-                <li><a href="">Contacts</a></li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Aid</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Tutorials</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">API</a>
+                </li>
+                <li>
+                    <img src="assets/share.png" alt="share">
+                    <a href="">Contacts</a>
+                </li>
             </ol>
         </div>
     </div>
@@ -278,24 +328,19 @@
         <div>
             <ul>
                 <li>
-                    <img src="assets/linkedin.png" alt="linkedIn">
-                    <a href="">Linkedin</a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin.png" alt="linkedIn"></a>
                 </li>
                 <li>
-                    <img src="assets/gorjeo.png" alt="twitter">
-                    <a href="">Twitter</a>
+                    <a href="https://twitter.com/" target="_blank"> <img src="assets/gorjeo.png" alt="twitter"></a>
                 </li>
                 <li>
-                    <img src="assets/facebook.png" alt="facebook">
-                    <a href="">Facebook</a>
+                    <a href="https://facebook.com/" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
                 </li>
                 <li>
-                    <img src="assets/instagram.png" alt="instagram">
-                    <a href="">Instagram</a>
+                    <a href="https://instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
                 </li>
                 <li>
-                    <img src="assets/github.png" alt="github">
-                    <a href="">Github</a>
+                    <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="github"></a>
                 </li>
             </ul>
             <p>Copyright © 2022 Radium Rocket. All rights reserved.</p>
