BaSP-W01: # added to a href links

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -10,12 +10,12 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="">Trackgenix</a></li>
-				<li><a href="">About Trackgenix</a></li>
-				<li><a href="">Functions</a></li>
-				<li><a href="">Info</a></li>
-				<li><a href="">History</a></li>
-				<li><a href="">Products & Services</a></li>
+				<li><a href="#">Trackgenix</a></li>
+				<li><a href="#">About Trackgenix</a></li>
+				<li><a href="#">Functions</a></li>
+				<li><a href="#">Info</a></li>
+				<li><a href="#">History</a></li>
+				<li><a href="#">Products & Services</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -26,19 +26,19 @@
 			<ul>
 				<li>
 					<img src="assets/home.png" alt="home">
-					<a href="" >Home</a>
+					<a href="#" >Home</a>
 				</li>
 				<li >
 					<img src="assets/add-user.png" alt="signup">
-					<a href="">Sign up</a>
+					<a href="#">Sign up</a>
 				</li>
 				<li>
 					<img src="assets/user-interface.png" alt="login">
-					<a href="">Login</a>
+					<a href="#">Login</a>
 				</li>
 				<li>
 					<img src="assets/email.png" alt="contact">
-					<a href="">Contact</a>
+					<a href="#">Contact</a>
 				</li>
 			</ul>
 		</section>
@@ -74,7 +74,7 @@
 						typesetting industry. Lorem Ipsum has been the industry's
 						standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					</p>
-					<a href="">LEARN MORE</a>
+					<a href="#">LEARN MORE</a>
 				</section>
 			</did>
 			<div>
@@ -236,19 +236,19 @@
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Functionalities</a>
+						<a href="#">Functionalities</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Downloads</a>
+						<a href="#">Downloads</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Integrations</a>
+						<a href="#">Integrations</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Additional features</a>
+						<a href="#">Additional features</a>
 					</li>
 				</ol>
 			</div>
@@ -266,19 +266,19 @@
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">About us</a>
+						<a href="#">About us</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Customers</a>
+						<a href="#">Customers</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Means</a>
+						<a href="#">Means</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Blog</a>
+						<a href="#">Blog</a>
 					</li>
 				</ol>
 			</div>
@@ -296,19 +296,19 @@
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Aid</a>
+						<a href="#">Aid</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Tutorials</a>
+						<a href="#">Tutorials</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">API</a>
+						<a href="#">API</a>
 					</li>
 					<li>
 						<img src="assets/share.png" alt="share">
-						<a href="">Contacts</a>
+						<a href="#">Contacts</a>
 					</li>
 				</ol>
 			</div>
